argocd/applications/kafka/kafka-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: kafka
  labels:
    app.kubernetes.io/name: kafka-exporter
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kafka-exporter
  ports:
    - name: metrics
      port: 9308
      targetPort: metrics
